#382 - 'Mindmap-UI_Issue_When i Scroll down Modules collapse icon is not display Properly.Fixed

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -291,3 +291,9 @@ select
 {
     width: 88.5% !important;
 }
+.ctExpandCreateFixed
+{
+    position: fixed !important;
+    bottom: 525px !important;
+    margin-bottom: 0px !important;
+}
